Build RN from source

--- a/app.json
+++ b/app.json
@@ -15,6 +15,17 @@
             "topShelfWide2x": "./assets/images/icon-4640x1440.png"
           }
         }
+      ],
+      [
+        "expo-build-properties",
+        {
+          "android": {
+            "buildReactNativeFromSource": true
+          },
+          "ios": {
+            "buildReactNativeFromSource": true
+          }
+        }
       ]
     ],
     "android": {
