--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "EXPO_TV=1 expo run:ios",
     "web": "expo start --web",
     "prebuild:tv": "EXPO_TV=1 expo prebuild --clean",
-    "prebuild": "expo prebuild --clean"
+    "prebuild": "expo prebuild --clean",
+    "lint": "expo lint"
   },
   "dependencies": {
     "@expo/metro-runtime": "~6.1.1",
@@ -30,6 +31,8 @@
   "devDependencies": {
     "@react-native-tvos/config-tv": "^0.1.4",
     "@types/react": "~19.1.10",
+    "eslint": "^9.0.0",
+    "eslint-config-expo": "~10.0.0",
     "typescript": "~5.9.2"
   },
   "expo": {
