--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tvnewarchfocustest",
   "version": "1.0.0",
   "scripts": {
+    "postinstall": "patch-package",
     "start": "EXPO_TV=1 expo start",
     "android": "EXPO_TV=1 expo run:android",
     "ios": "EXPO_TV=1 expo run:ios",
@@ -19,6 +20,8 @@
     "expo-build-properties": "~1.0.10",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
+    "patch-package": "^8.0.1",
+    "postinstall-postinstall": "^2.1.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "npm:react-native-tvos@0.81-stable",
